--- a/nginx/index.html
+++ b/nginx/index.html
@@ -9,5 +9,17 @@
     <h1>테스트 용 홈페이지</h1>
     <h3>Image Tag : test</h3>
     </center>
+    <script>
+        // JavaScript를 사용하여 IP 주소를 가져오고 페이지에 표시
+        fetch('https://api64.ipify.org?format=json')
+            .then(response => response.json())
+            .then(data => {
+                const ipAddress = data.ip;
+                document.getElementById('ip-address').textContent = `현재 IP 주소: ${ipAddress}`;
+            })
+            .catch(error => {
+                console.error('IP 주소를 가져오는 중 오류가 발생했습니다:', error);
+            });
+    </script>
   </body>
 </html>
