--- a/nginx/index.html
+++ b/nginx/index.html
@@ -7,17 +7,8 @@
   <body>
     <center>
     <h1>테스트 용 홈페이지</h1>
-    <p id="imageName"></p>
-      <p id="imageTag"></p>
+    <p id="nginx"></p>
+      <p id="v2"></p>
     </center>
-    <script>
-      // 이미지 태그 가져오기
-      const imageName = "Image Name: " + "{{ imageName }}";
-      document.getElementById("imageName").textContent = imageName;
-
-      // 이미지 태그 가져오기
-      const imageTag = "Image Tag: " + "{{ imageTag }}";
-      document.getElementById("imageTag").textContent = imageTag;
-    </script>
-  </body>
+      </body>
 </html>
